# checkit

./: .gitignore  CHANGES.md  Makefile  README.md  codemeta.json  make.bat  pyinstaller-darwin.spec  pyinstaller-win32.spec  requirements.txt  setup.cfg  setup.py
checkit/: __init__.py  __main__.py  access.py  app_frame.py  config.py  control.py  credentials.py  debug.py  exceptions.py  files.py  logo.py  main_body.py  messages.py  messages_styles.py  network.py  progress.py  record.py  records.py  run_manager.py  tind.py  ui.py
checkit/data/: help.md
describeit/: __init__.py  __version__.py
dev/icons/generated-icons/: checkit-icon.icns
dev/icons/original-artwork/: README.md
dev/installers/windows/: README.md  checkit_innosetup_script.iss.in  substitute_version.py
tests/data/: QA7.R46-QA9.G329 - shelf.csv  example.csv  inventory-test-case-output.csv  inventory-test-case.csv  list-with-lost-items.csv  one-barcode.csv
