# =============================================================================
# @file    setup.cfg
# @brief   Package version metadata for Check It!
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/checkit
# =============================================================================

[metadata]
name             = checkit
version          = 0.0.2
description      = Check It! takes a list of bar codes and generates a CSV
  file containing information about the items drawn from caltech.tind.io.
author           = Michael Hucka
author_email     = mhucka@caltech.edu
license          = BSD 3-clause
license_files    = LICENSE
url              = https://github.com/caltechlibrary/checkit
# The remaining items below are used by PyPI.
project_urls     =
  Source Code    = https://github.com/caltechlibrary/checkit
  Bug Tracker    = https://github.com/caltechlibrary/checkit/issues
keywords         = library inventory
classifiers      =
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.5
  Topic :: Utilities
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
scripts  = bin/checkit
zip_safe = False
python_requires = >= 3.5
